Fix horizontal scroll

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,7 @@
 body {
   font-family: 'Inter var', sans-serif;
 }
+
+html {
+  overflow-x: hidden;
+}
